--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 *.gen.*
 .godot/
 
+# Ignore the bin folder
+bin/*
+
 # Ignore library files but not the gdextension file
 demo/bin/*
 !demo/bin/android
